Inspect hover fixes
The inspect box is now hidden by default and does not jump to the
top-left corner.

--- a/css/main.css
+++ b/css/main.css
@@ -25,6 +25,7 @@ canvas#canvas {
   border: 1px solid black;
   padding: 5px;
   z-index: 100;
+  display: none;
 }
 
 #control {
